--- a/svhn/report/references.bib
+++ b/svhn/report/references.bib
@@ -61,3 +61,13 @@
     pages =        "6391--6400",
     year =         2015,
 }
+
+@article{rfimages,
+    author =       "A. Bosch and A. Zisserman and Xavier Munoz",
+    title =        "Image classification using random forests and ferns",
+    journal =      "IEEE 11th Int. Conf. Comput. Vision",
+    volume =       1,
+    number =       1,
+    pages =        "14-21",
+    year =         2007,
+}
