final version report

--- a/svhn/report/references.bib
+++ b/svhn/report/references.bib
@@ -71,3 +71,10 @@
     pages =        "14-21",
     year =         2007,
 }
+
+@misc{svhn,
+    author =       "Yuval Netzer and Tao Wang and Adam Coates and Alessandro Bissacco and Bo Wu and Andrew Y. Ng",
+    title =        "Reading Digits in Natural Images with Unsupervised Feature Learning",
+    note =         "NIPS Workshop on Deep Learning and Unsupervised Feature Learning ",
+    year =         2011,
+}
