--- a/svhn/report/report.tex
+++ b/svhn/report/report.tex
@@ -221,7 +221,7 @@ The Code will run in a basic Anaconda environment with proper dependencies. For 
   \item Keras
 \end{itemize}
 
-There are four ipython notebooks that are broken out into different parts of the assignment. These notebooks can be loaded in a jupyter environment and cells executed sequentially (please make sure data is present where required). Alternatively, they can be converted to .py scripts and run via Ipython the command line. Both the python files and the jupyter notebooks have been provided.
+There are four ipython notebooks that are broken out into different parts of the assignment. These notebooks can be loaded in a jupyter environment and cells executed sequentially (please make sure data is present where required). Alternatively, they can be converted to .py scripts and run via IPython in the command line. Both the python files and the jupyter notebooks have been provided.
 \begin{itemize}
   \item SVM\_and\_RandomForest.ipynb is the code behind the SVM and Random Forest models.
   \item CNN\_SVHN.ipynb is the code behind the CNN implementation.
